# Few_body_operators

./: GitHub.lnk
Codes/: ED_NaturalOperatorsRepresentation.py  Evolve_and_Compress_Hermitian_MPO.py  Evolve_and_Compress_MPO.py  Evolve_and_Compress_Unitary_MPO.py  IRLM_Sz_%s_L10_dt0.01_alpha-1_Truncationglobal_chi1024_Sect10_TrottOrder4_Nsteps310_phys_dims1_d2_Uint0.2_V0.2_gamma0.5_ed0_J0_Jz0.h5  IRLM_Sz_L30_dt0.01_alpha-1_Truncationglobal_chi1024_Sect30_TrottOrder4_Nsteps509_phys_dims1_d2_Uint0.1_V0.2_gamma0.5_ed0_J0_Jz0.h5  IRLM_Sz_L30_dt0.01_alpha-1_Truncationglobal_chi1024_Sect30_TrottOrder4_Nsteps509_phys_dims1_d2_Uint0.2_V0.2_gamma0.5_ed0_J0_Jz0.h5  evolve_and_compress_MPO.py  mps_mpo_optimized.py
Codes/MPO_Simulation_ITensor/: CMakeLists.txt  readme_cpp.md
Codes/MPO_Simulation_ITensor/include/: tensor_network.hpp
Codes/MPO_Simulation_ITensor/src/: simulation_itensor.cpp
Codes/Modules/: linalg.py  sparseoperations.py  symmpo.py  tebd.py  trotter.py
Plots/Compressed_Sz/: Compressed_Sz.py  IRLM_Sz_L20_dt0.01_alpha-1_Truncationglobal_chi1024_Sect20_TrottOrder4_Nsteps610_phys_dims1_d2_Uint0.2_V0.2_gamma0.5_ed0_J0_Jz0.h5  IRLM_Sz_L30_dt0.01_alpha-1_Truncationglobal_chi1024_Sect30_TrottOrder4_Nsteps1010_phys_dims1_d2_Uint0.2_V0.2_gamma0.5_ed0_J0_Jz0.h5
Plots/Compressed_U/: Compressed_U.py  IRLM_U_L10_dt0.01_alpha-1_Truncationglobal_chi1024_Sect10_TrottOrder4_Nsteps50_phys_dims1_d2_Uint0.2_V0.2_gamma0.5_ed0_J0_Jz0.h5  IRLM_U_L20_dt0.01_alpha-1_Truncationglobal_chi1024_Sect20_TrottOrder4_Nsteps151_phys_dims1_d2_Uint0.2_V0.2_gamma0.5_ed0_J0_Jz0.h5  IRLM_U_L20_dt0.01_alpha-1_Truncationglobal_chi1024_Sect20_TrottOrder4_Nsteps50_phys_dims1_d2_Uint0.2_V0.2_gamma0.5_ed0_J0_Jz0.h5
